NATTQA-ENV/force-app/main/default/objects/PricebookEntry/PricebookEntry.object-meta.xml
<CustomObject>
</CustomObject>