NATTQA-ENV/force-app/main/default/objects/PricebookEntry/fields/NAOCAP_Customer_List_Price__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Customer_List_Price__c</fullName>
    <label>NAOCAP Customer List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>