NATTQA-ENV/force-app/main/default/objects/PricebookEntry/fields/NATT_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Effective_Date__c</fullName>
    <description>Indicates the date this pricebook entry was effective. The field supports the PPG B2B Commerce implementation, and provides information necessary to generate price change reports.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>